# IRL_with_dynamical_system

./: README.md  data_1.mat
ShowingShapes/: CMakeLists.txt  package.xml
ShowingShapes/include/: ShowingShapes.h
mouse_perturbation_robot/: CMakeLists.txt  README.md  informationKUKA13.923889.txt  informationKUKA14.382500.txt  informationKUKA14.493055.txt  informationKUKA14.514444.txt  informationKUKA14.752500.txt  informationKUKA14.782222.txt  informationKUKA14.821944.txt  informationKUKA14.849167.txt  informationKUKA14.962222.txt  informationKUKA14.982223.txt  informationKUKA15.000556.txt  informationKUKA15.019444.txt  informationKUKA15.032500.txt  informationKUKA15.045000.txt  informationKUKA15.060000.txt  informationKUKA15.783055.txt  informationKUKA15.812778.txt  informationKUKA15.845555.txt  informationKUKA15.903334.txt  informationKUKA16.659721.txt  informationKUKA17.171667.txt  informationKUKA17.182222.txt  package.xml
mouse_perturbation_robot/include/: MotionGenerator.h
mouse_perturbation_robot/scripts/: iteration_learning.py  obstacle_parameter_setting.py  trial.py
mouse_perturbation_robot/src/: DSObstacleAvoidance.cpp  MotionGenerator.cpp  MouseInterface.cpp
obstacle_wih_sample_from_dynamics/: Jun12_01_b2.mat  addpaths.m  data_1.mat  data_10.mat  data_11.mat  data_12.mat  data_1_1_4.mat  data_2.mat  data_3.mat  data_4.mat  data_5.mat  data_6.mat  data_7.mat  data_8.mat  data_9.mat  data_t_small.mat  dd.mat  logoutput.mat  obstacle_test.m  obstacle_test.m~  readme.md  real_data_mid.mat  s_high_set.mat  s_low_set.mat  s_may_24_test2.mat  s_may_24_test3.mat  s_may_24_test4.mat  save_.mat  sim_1_1_1.mat  sim_2_1_1.mat  sim_2_2_1.mat  two_obs.mat  weight0_9and0_2.mat
obstacle_wih_sample_from_dynamics/Auglag/: auglag.m
obstacle_wih_sample_from_dynamics/Data/: data_real_n_weight.mat  data_t_large.mat  (+2 more)
(+1777 files in other folders)
